# attestation-service

./: Cargo.toml
lib/: Cargo.toml
lib/src/: fs.rs  lib.rs
lib/src/core/: mod.rs
lib/src/core/proxy/: mod.rs
lib/src/core/verifier/: mod.rs
lib/src/core/verifier/policy/opa/: mod.rs  opa.go
lib/src/core/verifier/sample/: mod.rs  policy.rs
lib/src/core/verifier/sgx/: mod.rs  policy.rs
lib/src/core/verifier/tdx/: mod.rs  policy.rs
lib/src/management/: mod.rs  opa.rs
server/: Cargo.toml  README.md  build.rs
server/app/tool/: readme.md
server/app/tool/src/: api.rs  attestation.rs  management.rs  opa.rs
server/proto/: attestation.proto  management.proto
server/src/: attestation.rs  main.rs
server/src/management/: opa.rs
