[package]
name = "attestation-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.8.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.17"
async-trait = "0.1.31"
uuid = { version = "0.4", features = ["v4"] }
